--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //noinspection GradleDynamicVersion
-    compile 'com.android.support:appcompat-v7:25.+'
     //noinspection GradleDynamicVersion
-    compile 'com.android.support:design:25.+'
     //noinspection GradleDynamicVersion
-    compile 'com.android.support:support-vector-drawable:25.+'
-    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
