--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,11 @@ android {
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        buildConfigField "long", "BUILD_TIME",
+                System.currentTimeMillis() + "L"
     }
     buildTypes {
         release {
