--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.1"
     defaultConfig {
         applicationId "com.example.android.weeklytips"
         minSdkVersion 15
@@ -21,16 +20,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //noinspection GradleDynamicVersion
-    compile 'com.android.support:appcompat-v7:27.+'
+    implementation 'com.android.support:appcompat-v7:27.+'
     //noinspection GradleDynamicVersion
-    compile 'com.android.support:design:27.+'
+    implementation 'com.android.support:design:27.+'
     //noinspection GradleDynamicVersion
-    compile 'com.android.support:support-vector-drawable:27.+'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-vector-drawable:27.+'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
